scripts/nullaway/original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8.txt
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:11: error: [NullAway] initializer method does not guarantee @NonNull field NotificationEmprunts (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Enseignant(int i, String n, String p, String t, int nbEM) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Utilisateur.java:194: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return resultat;
		^
    (see http://t.uber.com/nullaway )
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/emprunt/Emprunt.java:17: error: [NullAway] initializer method does not guarantee @NonNull field commentaire (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Emprunt(utilisateurs.Utilisateur e, medias.Media m, Date de, Date dr) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/emprunt/Emprunt.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
		commentaire = null;
		            ^
    (see http://t.uber.com/nullaway )
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Projet.java:19: error: [NullAway] initializer method does not guarantee @NonNull field stage (line 8) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Projet(Cours c, ArrayList<utilisateurs.Etudiant> e, int i, String n, String d, Date dd, Date df) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurUser.java:99: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		cours.setProf(null);		
		              ^
    (see http://t.uber.com/nullaway )
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurUser.java:171: error: [NullAway] returning @Nullable expression from method with @NonNull return type
				return null;
				^
    (see http://t.uber.com/nullaway )
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:38: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		Projet projet = new Projet(cours, null, idProjet, n, d, dd, df);
		                                  ^
    (see http://t.uber.com/nullaway )
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/test/Main.java:6: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		Bdd.main(null);
		         ^
    (see http://t.uber.com/nullaway )
9 errors
